--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "ldrs": "^1.0.1",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
