--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "classnames": "^2.3.2",
     "ldrs": "^1.0.1",
     "lucide-react": "^0.298.0",
-    "next": "14.0.4",
+    "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "react": "^18",
